# love-bevy-online

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
src/: app.rs  boids.rs  gpu_sim.rs  main.rs  menu.rs  render.rs  settings.rs  ui.rs
src/experiments/: mod.rs
src/experiments/fish/: mod.rs  render.rs  school_truth.txt  settings.rs  sim.rs  ui.rs  water.rs
src/experiments/flock/: gpu_sim.rs  mod.rs  render.rs  settings.rs  sim.rs  ui.rs
src/experiments/flow/: mod.rs  render.rs  settings.rs  sim.rs  ui.rs
src/experiments/forest/: mod.rs  render.rs  settings.rs  sim.rs  ui.rs
src/experiments/lizard/: mod.rs  render.rs  settings.rs  sim.rs  ui.rs
web/: build.sh  index.html  nginx.conf
