[package]
name = "boids"
version = "0.1.0"
edition = "2024"

[features]
# Dynamic linking gives fast iterative compiles but the binary then needs
# Rust's dylibs (it only runs via `cargo run`). On by default for development;
# build a standalone binary with: cargo build --release --no-default-features
default = ["dynamic"]
dynamic = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.18.1" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1 # Compile the entire crate as one unit. Marginal improvements.
lto = "thin" # Second optimization pass. Marginal improvements.
