[package]
name = "boids"
version = "0.1.0"
edition = "2024"

[features]
# Dynamic linking gives fast iterative compiles but the binary then needs
# Rust's dylibs (it only runs via `cargo run`). On by default for development;
# build a standalone binary with: cargo build --release --no-default-features
default = ["dynamic"]
dynamic = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.18.1" }
# Same major version bevy itself uses; for the raw GPU buffers in src/render.rs.
bytemuck = { version = "1", features = ["derive"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9"

# Typed entry on the slider value labels: Cmd/Ctrl+C/V copy and paste of
# exact values (e.g. flow seeds). Native only — the web build still types,
# it just has no clipboard access.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3"

# Browser builds only (`web/build.sh`): rand's entropy source needs an
# explicit opt-in to the browser-crypto backend on wasm. This is half of the
# opt-in; the matching `--cfg getrandom_backend="wasm_js"` rustflag lives in
# `.cargo/config.toml`. Native builds are untouched by this section.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1 # Compile the entire crate as one unit. Marginal improvements.
lto = "thin" # Second optimization pass. Marginal improvements.
